--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
+    "recharts": "^2.4.3",
     "sass": "^1.58.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
